# CIS-6930

./: test.txt
Assignments/: README.txt
Assignments/Assignment1/: CMakeLists.txt  cudaCheck.cuh  deviceQuery.cu  transpose.cu
share/: README.txt
share/Assignment1/: transpose.cu
